--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -80,9 +80,13 @@ $black: #2b2523
   fill: currentColor
 .navbar-brand .navbar-item.logo
   padding: 0 1rem
+.homeTitle
+  font-size: 24px
 footer.footer
   padding: 3rem 0rem 0rem
   background-color: transparent
+.footerIconContainer
+  margin-bottom: 50px
 
 //Menu overrides
 $menu-item-color: $white-ter
@@ -138,3 +142,13 @@ $menu-label-color: $white-ter
     text-align: center;
     max-width: 70%;
     margin: 0 0 1em;
+
+.customContainer
+  max-width: 760px !important
+
+.customContent
+  display: flex
+
+.customThumbnail
+  min-width: 250px
+  margin-right: 50px
